--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.0",
-    "typescript": "^4.9.5"
-  },
-  "devDependencies": {
+    "typescript": "^4.9.5",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20"
-  }
+  },
+  "devDependencies": {}
 }
