--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm i \"npx tsc\"",
+    "build": "tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
@@ -18,11 +18,12 @@
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.0",
-    "typescript": "^4.9.5",
-    "@types/express": "^4.17.17",
+    "typescript": "^4.9.5"
+  },
+  "devDependencies": {
     "@types/node": "^18.14.2",
+    "@types/express": "^4.17.17",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20"
-  },
-  "devDependencies": {}
+  }
 }
