--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
@@ -21,8 +22,9 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@types/node": "^18.14.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/node": "^18.14.2",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20"
   }
